Removed background colours, redesigned other pages

--- a/P2/index.html
+++ b/P2/index.html
@@ -30,14 +30,16 @@
 
     <div class="landing">
         <div>
-            <div class="wrap-content">
-                <h1>Our experienced professionals assist you to execute <em>successful</em> projects</h1>
-                <h2 class="subheading">We believe our team can bring a new perspective to design and operations that
-                    will
-                    reduce
-                    the environmental footprint of any project.</h2>
-                <a class="button-nav" href="./pages/contact.html">Contact us &nbsp &nbsp ➞</a>
-                <img src="./img/landing.jpeg" alt=""">
+            <div class="wrap-content two-column">
+                <div>
+                    <h1>Our experienced professionals assist you to execute <em>successful</em> projects</h1>
+                    <h2 class="subheading">We believe our team can bring a new perspective to design and operations that
+                        will
+                        reduce
+                        the environmental footprint of any project.</h2>
+                    <a class="button-nav" href="./pages/contact.html">Contact us &nbsp &nbsp ➞</a>
+                </div>
+                <img src="./img/perspective.jpg" alt="">
             </div>
         </div>
     </div>
@@ -55,36 +57,14 @@
     </div>
 
 
-
-
-
-    <!-- <div class="wrap-content">
-            <h1>Our experienced professionals assist you to execute <em>successful</em> projects</h1>
-            <h2 class="subheading">We believe our team can bring a new perspective to design and operations that will
-                reduce
-                the environmental footprint of any project.</h2>
-            <a class="button-nav" href="#">Contact us &nbsp &nbsp ➞</a>
-            <img src="./img/landing.jpeg" alt="aerial view of a project site">
-
-            <div class="brands">
-                <img src="./img/p1.jpg" alt="">
-                <img src="./img/p2.jpg" alt="">
-                <img src="./img/p3.jpg" alt="">
-                <img src="./img/p4.jpg" alt="">
-                <img src="./img/p5.jpg" alt="">
-                <img src="./img/p6.jpg" alt="">
-                <img src="./img/p7.jpg" alt="">
-                <img src="./img/p8.jpg" alt="">
-            </div>
-        </div> -->
-
-
-    <section class="bg-gray">
+    <section>
         <div class="wrap-content">
             <div>
                 <h2>Engineering consulting and technical services</h2>
 
                 <div class="two-column">
+                    <img class="image-medium" src="./img/project-2.jpg" alt="people looking at a monitor">
+
                     <div class="font-large">
                         <p>
                             SEEDA is an enthusiastic, creative and diverse team offering engineering and project
@@ -101,7 +81,6 @@
                             experienced engineers and technologists available in Western Canada.
                         </p>
                     </div>
-                    <img class="image-medium" src="./img/perspective.jpg" alt="people looking at a monitor">
                 </div>
 
 
@@ -109,7 +88,8 @@
                     <div class="service">
                         <img src="./icons/monitor effectiveness.svg" alt="monitor icon">
                         <h3>Monitor effectiveness of workflows, processes and interfaces </h3>
-                        <p>With rigorous monitoring, we will improve the effectiveness and efficiency of your workflows, processes, and interface.</p>
+                        <p>With rigorous monitoring, we will improve the effectiveness and efficiency of your workflows,
+                            processes, and interface.</p>
                     </div>
 
                     <div class="service">
@@ -146,38 +126,40 @@
 
     </section>
 
-    <section class="bg-black-gray">
+    <section>
         <div class="wrap-content">
             <h2>We assist you in the delivering of sustainable projects</h2>
-            <div class="two-column font-large cards">
+            <div class="two-column font-large">
                 <div>
+                    <p>Our experienced associates participate in projects to help deliver services to clients
+                    </p>
+                    <div class="card">
+                        <a href="./pages/struna.html"> <img src="./img/about.jpg" alt="" class="image-large">
+                            <h3>STRUNA: Engineering Dashboard</h3>
+                            <h4>Stress/structural Navigator or Engineering Dashboard.
+                            </h4>
+                        </a>
+                    </div>
 
-                    <p>Aliquid consequuntur cupiditate esse amet consectetur tenetur elit. Consequuntur, ipsa. Totam
-                        quisquam fugit
-                        amet consequatur sequi quos consequuntur.</p>
-                    <a href="./pages/struna.html"> <img src="./img/about.jpg" alt="" class="image-large">
-                        <h3>STRUNA: Engineering Dashboard</h3>
-                        <h4>Stress/structural Navigator or Engineering Dashboard.
-                        </h4>
-                    </a>
-
-                    <div>
+                    <div class="card">
                         <a href="#">
-                            <img src="./img/project-4.jpg" alt="project site" class="image-very-large">
+                            <img src="./img/landing-2.jpeg" alt="project site" class="image-very-large">
                             <h3>Economic Water & Electricity</h3>
                             <h4>Providing water and electricity to rural residents.</h4>
                         </a>
                     </div>
                 </div>
                 <div>
-                    <a href="./pages/reengineering-canada.html">
-                        <img src="./img/project-1.jpg" alt="project site" class="image-very-large">
-                        <h3>Re-engineering Canada </h3>
-                        <h4>Building a Nation 150 years after three British Fiefdoms in North America United.</h4>
-                    </a>
-                    <div>
+                    <div class="card">
+                        <a href="./pages/reengineering-canada.html">
+                            <img src="./img/project-1.jpg" alt="project site" class="image-very-large">
+                            <h3>Re-engineering Canada </h3>
+                            <h4>Building a Nation 150 years after three British Fiefdoms in North America United.</h4>
+                        </a>
+                    </div>
+                    <div class="card">
                         <a href="#">
-                            <img src="./img/project-3.jpeg" alt="project site" class="image-large">
+                            <img src="./img/project-3.jpg" alt="project site" class="image-large">
                             <h3>Structural Steel Optimization</h3>
                             <h4>Using universal structural materials for modules to save steel, cut cost, and reduce
                                 emissions.
@@ -187,14 +169,14 @@
                 </div>
             </div>
 
-            <div class=" bg-dark-gray large-card">
+            <div class=" bg-black-gray large-card">
                 <div class="text-white">
                     <h3>View all our works</h3>
                     <p>For nearly 50 years, we have successfully completed projects around the world, from Argentina to
                         Canada, and Russia to Spain.</p>
                     <a href="#">Look at our portfolio ></a>
                 </div>
-                <img src="./img/large-card.jpg" alt="project site">
+                <img src="./img/more-projects.jpg" alt="project site">
             </div>
 
         </div>
@@ -204,7 +186,7 @@
 
 
 
-    <section style="background-color: #F2F4F8;">
+    <section>
         <div class="wrap-content">
             <h2>The latest from SEEDA</h2>
 
@@ -229,7 +211,19 @@
                     <img src="./img/article-2.jpg" alt="">
                 </div>
             </div>
+
+            <a href="./pages/stories.html" class="white-link">
+                <div id="more-stories">
+                    <div>
+                        <h3>Read the latest stories from us</h3>
+                        <p>Find more about our events
+                        </p>
+                    </div>
+
+                </div>
+            </a>
         </div>
+
 
         <div class="wrap-content">
             <div class="bg-dark-gray large-card team">
@@ -275,8 +269,7 @@
     <footer>
         <div class="wrap-footer">
             <div class="footer-list">
-                <img src="./img/logo.png" alt="SEEDA logo">
-                <p class="regular">© 2020 SEEDA Inc. All Rights Reserved.</p>
+                <p class="regular copyright">© 2020 SEEDA Inc. All Rights Reserved.</p>
             </div>
             <div class="footer-list">
                 <p>Info</p>
