--- a/P2/pages/about.html
+++ b/P2/pages/about.html
@@ -30,6 +30,10 @@
         <div>
             <div class="wrap-content">
                 <h1>About Us</h1>
+                <h2>SEEDA is an enthusiastic, creative and diverse team offering engineering and project management
+                    services to assist clients in the successful and sustainable execution of projects.
+                </h2>
+                <img src="/img/covers/about-cover.jpg" alt="">
             </div>
         </div>
     </div>
@@ -37,6 +41,7 @@
 
     <main>
         <section class="wrap-content">
+            <h3 class="body-heading">Our team</h3>
             <div class="two-column font-large team">
                 <div>
                     <img src="../img/max.jpg" alt="max">
@@ -118,6 +123,8 @@
 
 
 
+            <h3 class="body-heading">Get in touch</h3>
+
             <div class="bg-black large-card">
                 <div class="text-white">
                     <h3>Interested to know more? Let us know!</h3>
@@ -126,7 +133,7 @@
                         Suspendisse potenti nullam ac tortor vitae purus faucibus. Id venenatis a condimentum
                         vitae
                         sapien
-                        pellentesque. </p>                
+                        pellentesque. </p>
                     <a href="../pages/contact.html">Contact us ></a>
                 </div>
                 <img src="../img/contact-us.jpg" alt="project site">
@@ -155,8 +162,7 @@
     <footer>
         <div class="wrap-footer">
             <div class="footer-list">
-                <img src="../img/logo.png" alt="SEEDA logo">
-                <p class="regular">© 2020 SEEDA Inc. All Rights Reserved.</p>
+                <p class="regular copyright">© 2020 SEEDA Inc. All Rights Reserved.</p>
             </div>
             <div class="footer-list">
                 <p>Info</p>
