--- a/P2/pages/contact.html
+++ b/P2/pages/contact.html
@@ -30,6 +30,9 @@
         <div>
             <div class="wrap-content">
                 <h1>Contact Us</h1>
+                <h2>Thank you for considering SEEDA!
+                </h2>
+                <img src="/img/covers/contact-us.jpg" alt="">
             </div>
         </div>
     </div>
@@ -38,8 +41,7 @@
 
 
         <section class="wrap-content">
-            <h2>Thank you for considering SEEDA!
-            </h2>
+
 
             <div class="two-column">
                 <div class="font-large">
@@ -93,8 +95,7 @@
     <footer>
         <div class="wrap-footer">
             <div class="footer-list">
-                <img src="../img/logo.png" alt="SEEDA logo">
-                <p class="regular">© 2020 SEEDA Inc. All Rights Reserved.</p>
+                <p class="regular copyright">© 2020 SEEDA Inc. All Rights Reserved.</p>
             </div>
             <div class="footer-list">
                 <p>Info</p>
