--- a/P2/pages/hydraulic-ramp.html
+++ b/P2/pages/hydraulic-ramp.html
@@ -169,8 +169,7 @@
     <footer>
         <div class="wrap-footer">
             <div class="footer-list">
-                <img src="../img/logo.png" alt="SEEDA logo">
-                <p class="regular">© 2020 SEEDA Inc. All Rights Reserved.</p>
+                <p class="regular copyright">© 2020 SEEDA Inc. All Rights Reserved.</p>
             </div>
             <div class="footer-list">
                 <p>Info</p>
