--- a/P2/pages/projects.html
+++ b/P2/pages/projects.html
@@ -30,49 +30,124 @@
         <div>
             <div class="wrap-content">
                 <h1>Projects</h1>
+                <h2>Our experienced associates participate in projects to help deliver services to clients.</h2>
+                <img src="/img/covers/projects-cover.jpg" alt="project">
             </div>
         </div>
     </div>
 
+    <div class="wrap-content two-column font-large">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem assumenda reiciendis similique
+            doloremque nisi placeat iste corporis accusantium atque, quod quaerat numquam maxime sed laborum rem
+            consequatur eius dolore illum.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi, placeat? Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Omnis obcaecati odio deserunt officiis libero? Accusantium.</p>
+    </div>
+
+    <h3 class="wrap-content body-heading">
+        How we work
+    </h3>
+    <div class="wrap-content two-column">
+        <div class="font-large">
+            <p class="bold">We collaborate with Civil Engineers, Environmental Specialists, Logistical
+                Experts,
+                Socio-economists, Architectural House designers and other experts to complete projects.</p>
+            <p>SEEDA is in the business of sustainable development for a wide variety of engineering
+                projects focused on petroleum, industrial and infrastructure development. </p>
+            <p>We are an association of
+                professionals with wide experience in Canada and some 40 other countries and believe that this
+                experience
+                can be applied to family housing development in Canada that could radically change Canadian housing
+                development as well as lowering the environmental impact of housing construction and its construction
+                and
+                operating costs.</p>
+        </div>
+        <img src="../img/project-body.jpg" alt="man looking at the screen" >
+    </div>
+
+
 
     <main>
-
         <div class="wrap-content">
-            <div class="two-column projects">
+            <h3 class="body-heading">Latest projects</h3>
+            <div class="projects">
+                <div class="project-card">
+                    <a href="../pages/struna.html">
+                        <img src="../img/about.jpg" alt="">
+                        <div>
+                            <h3>STRUNA: Engineering Dashboard</h3>
+                            <p>Stress/structural Navigator or Engineering Dashboard.</p>
+                        </div>
+                    </a>
+                </div>
 
                 <div class="project-card">
-                    <a href="../pages/struna.html"><img src="../img/about.jpg" alt="">
-                        <h3>STRUNA: Engineering Dashboard</h3>
-                        <p>Stress/structural Navigator or Engineering Dashboard.</p>
+                    <a href="../pages/reengineering-canada.html">
+                        <img src="../img/project-1.jpg" alt="">
+                        <div>
+                            <h3>Re-engineering Canada</h3>
+                            <p>Building a Nation 150 years after three British Fiefdoms in North America United.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+
+            <div class="projects">
+                <div class="project-card">
+                    <a href="#">
+                        <img src="../img/landing-2.jpeg" alt="">
+                        <div>
+                            <h3>Economic Water & Electricity</h3>
+                            <p>Providing water and electricity to rural residents.</p>
+                        </div>
                     </a>
                 </div>
 
                 <div class="project-card">
                     <a href="#">
-                        <img src="../img/project-4.jpg" alt="">
-                        <h3>Economic Water & Electricity</h3>
-                        <p>Providing water and electricity to rural residents.</p>
-                    </a>
-                </div>
-
-            </div>
-
-
-            <div class="two-column projects">
-                <div class="project-card">
-                    <a href="../pages/reengineering-canada.html"><img src="../img/project-1.jpg" alt="">
-                        <h3>Re-engineering Canada</h3>
-                        <p>Building a Nation 150 years after three British Fiefdoms in North America United.</p>
-                    </a>
-                </div>
-                <div class="project-card">
-                    <a href="#"><img src="../img/project-3.jpeg" alt="">
-                        <h3>Structural Steel Optimization</h3>
-                        <p>Using universal structural materials for modules to save steel, cut cost, and reduce
-                            emissions.</p>
+                        <img src="../img/project-3.jpg" alt="">
+                        <div>
+                            <h3>Structural Steel Optimization</h3>
+                            <p>Using universal structural materials for modules to save steel, cut cost, and reduce
+                                emissions.</p>
+                        </div>
                     </a>
                 </div>
             </div>
+        </div>
+
+
+
+        <div class="wrap-content">
+            <h3 class="body-heading">Other projects</h3>
+            <hr>
+            <div class="other-project two-column">
+                <h4>Hydrogen Balloons</h4>
+                <h5>Revisiting old "Zeppelin" ideas could optimize major construction projects.</h5>
+            </div>
+            <hr>
+            <div class="other-project two-column">
+                <h4>Sustainable Family Individual Housing</h4>
+                <h5>The capital cost of such a home is often out of their economic reach from a construction and
+                    operating point of view combined with vagaries of the real estate market.</h5>
+            </div>
+            <hr>
+            <div class="other-project two-column">
+                <h4>Sand Cell Structures</h4>
+                <h5>A clean and fast offshore pad construction in environmentally protected areas. </h5>
+            </div>
+            <hr>
+            <div class="other-project two-column">
+                <h4>Clean Energy North</h4>
+                <h5>We are developing a wind turbin for the arctic.</h5>
+            </div>
+            <hr>
+            <div class="other-project two-column">
+                <h4>Hydrogen Balloons</h4>
+                <h5>Revisiting old "Zeppelin" ideas could optimize major construction projects.</h5>
+            </div>
+            <hr>
         </div>
 
 
@@ -96,8 +171,7 @@
     <footer>
         <div class="wrap-footer">
             <div class="footer-list">
-                <img src="../img/logo.png" alt="SEEDA logo">
-                <p class="regular">© 2020 SEEDA Inc. All Rights Reserved.</p>
+                <p class="regular copyright">© 2020 SEEDA Inc. All Rights Reserved.</p>
             </div>
             <div class="footer-list">
                 <p>Info</p>
