--- a/P2/pages/reengineering-canada.html
+++ b/P2/pages/reengineering-canada.html
@@ -37,7 +37,8 @@
 
             <h3>Introduction</h3>
             <div>
-                <p class="font-extra-large">
+                <div class="two-column font-extra-large">
+                <p>
                     This document is presented by two Canadian civil engineers; one in mid-career, and the other
                     long-retired after more than 40 years practicing as a consulting engineer. Historically, engineers
                     have a long history of planning, design, construction, and innovation on a wide variety of projects.
@@ -49,7 +50,7 @@
                     the Canadian Pacific Railway (CPR).
                 </p>
 
-                <p class="font-extra-large">
+                <p>
                     The authors of this report have worked on a wide variety of development projects across Canada, and
                     in over 40 other countries in the Americas, Europe, Asia and Africa. This experience has identified
                     in Canada some serious problems with the political structure of this 150 year old nation, and has
@@ -59,11 +60,12 @@
                     in many parts of the country.
                 </p>
 
-                <p class="font-extra-large">
+                <div>
+                <p>
                     This document follows the typical format of many engineering reports as outlined below:
                 </p>
 
-                <ul class="font-extra-large">
+                <ul>
                     <li>
                         Introduction
                     </li>
@@ -100,8 +102,9 @@
                         Summary
                     </li>
                 </ul>
+            </div>
 
-                <p class="font-extra-large">
+                <p>
                     Re-engineering Canada is not a project for older professionals sitting philosophically in
                     comfortable think-tank offices. We believe everyone can contribute to our initiatives. It must be
                     developed, and adopted so the benefits are available for children in the future when Canada
@@ -115,12 +118,14 @@
                     environment or economy.
                 </p>
 
-                <p class="font-extra-large">
+                <p>
                     This document proposes radical changes that could significantly improve the lives of Canada’s
                     citizens. It would be the authors’ objectives that, as the country celebrates its 200th anniversary,
                     the colonial fiefdom mentality would have been totally eliminated. A Canadian citizen’s first
                     loyalty is to their country, and only then to the province.
                 </p>
+
+                </div>
 
                 <h3>Definition of the problem</h3>
 
@@ -507,8 +512,7 @@
     <footer>
         <div class="wrap-footer">
             <div class="footer-list">
-                <img src="../img/logo.png" alt="SEEDA logo">
-                <p class="regular">© 2020 SEEDA Inc. All Rights Reserved.</p>
+                <p class="regular copyright">© 2020 SEEDA Inc. All Rights Reserved.</p>
             </div>
             <div class="footer-list">
                 <p>Info</p>
