--- a/P2/pages/stories.html
+++ b/P2/pages/stories.html
@@ -30,6 +30,8 @@
         <div>
             <div class="wrap-content">
                 <h1>Stories</h1>
+                <h2>The latest news and stories on our company and events we are involved with.</h2>
+                <img src="/img/covers/stories-cover.jpg" alt="Person looking at wire connections">
             </div>
         </div>
     </div>
@@ -38,38 +40,46 @@
     <main>
 
         <div class="wrap-content">
+            <h3 class="body-heading">Latest stories</h3>
             <div class="two-column stories">
-
-                <div class="story">
-                    <a href="./hydraulic-ramp.html"><img src="../img/article-1.jpg" alt="">
+                <div class="article-card">
+                    <div>
                         <h3>Hydraulic ram pump systems</h3>
-                        <p>September 2020</p>
-                    </a>
+                        <p>It is time to investigate the alternatives for water pumps.
+                        </p>
+                        <a href="/pages/hydraulic-ramp.html">Read more ></a>
+                    </div>
+                    <img src="../img/article-1.jpg" alt="">
                 </div>
 
-                <div class="story">
-                    <a href="./time-to-step-up.html">
-                        <img src="../img/article-2.jpg" alt="">
+                <div class="article-card">
+                    <div>
                         <h3>It's time to step up</h3>
-                        <p>July 2019</p>
-                    </a>
+                        <p>A simple idea can evolve to a physical tool that contributes to our daily lifestyle.
+                        </p>
+                        <a href="/pages/time-to-step-up.html">Read more ></a>
+                    </div>
+                    <img src="../img/article-2.jpg" alt="">
                 </div>
 
-            </div>
-
-
-            <div class="two-column stories">
-                <div class="story">
-                    <a href="./cleantech-asia.html"><img src="../img/article-3.jpg" alt="">
+                <div class="article-card">
+                    <div>
                         <h3>Cleantech Forum Asia</h3>
-                        <p>November 2019</p>
-                    </a>
+                        <p>A simple idea can evolve to a physical tool that contributes to our daily lifestyle.
+                        </p>
+                        <a href="/pages/cleantech-asia.html">Read more ></a>
+                    </div>
+                    <img src="../img/article-3.jpg" alt="a bulldozer ">
                 </div>
-                <div class="story">
-                    <a href="./sustainable-development.html"><img src="../img/article-4.jpg" alt="">
+
+                <div class="article-card">
+                    <div>
                         <h3>Sustainable Development</h3>
-                        <p>January 2019</p>
-                    </a>
+                        <p>A simple idea can evolve to a physical tool that contributes to our daily lifestyle.
+                        </p>
+                        <a href="/pages/sustainable-development.html">Read more ></a>
+                    </div>
+                    <img src="../img/article-4.jpg" alt="a laptop ">
                 </div>
             </div>
         </div>
@@ -95,8 +105,7 @@
     <footer>
         <div class="wrap-footer">
             <div class="footer-list">
-                <img src="../img/logo.png" alt="SEEDA logo">
-                <p class="regular">© 2020 SEEDA Inc. All Rights Reserved.</p>
+                <p class="regular copyright">© 2020 SEEDA Inc. All Rights Reserved.</p>
             </div>
             <div class="footer-list">
                 <p>Info</p>
