--- a/P2/pages/struna.html
+++ b/P2/pages/struna.html
@@ -10,7 +10,7 @@
     <title>SEEDA</title>
 </head>
 
-<body class="project">
+<body>
 
     <header class="header">
         <nav>
@@ -29,7 +29,7 @@
 
     <main>
 
-        <div class="wrap-content">
+        <div class="wrap-content project">
             <h1 class="project-title">STRUNA: Engineering Dashboard</h1>
             <h2>STRUNA – STRESS/STRUCTURAL NAVIGATOR OR ‘ENGINEERING DASHBOARD’
             </h2>
@@ -37,43 +37,51 @@
 
             <h3>Introduction</h3>
             <div>
-                <p class="font-extra-large">
-                    Design of any large industrial process plant is inconceivable without continuous spatial
-                    coordination
-                    between designers and engineers of three engineering disciplines: Mechanical/Piping, Structural and
-                    Electrical. 3D-modelling software employed for the given project serves as the common
-                    three-dimensional
-                    medium for interdisciplinary coordination. The obvious benefits of such approach have been discussed
-                    in
-                    multiple publications and would be beyond the topic of the present article.
-                </p>
+                <div class="two-column font-extra-large">
+                    <p>
+                        Design of any large industrial process plant is inconceivable without continuous spatial
+                        coordination
+                        between designers and engineers of three engineering disciplines: Mechanical/Piping, Structural
+                        and
+                        Electrical. 3D-modelling software employed for the given project serves as the common
+                        three-dimensional
+                        medium for interdisciplinary coordination. The obvious benefits of such approach have been
+                        discussed
+                        in
+                        multiple publications and would be beyond the topic of the present article.
+                    </p>
 
-                <p class="font-extra-large">
-                    The new, uncharted area and the main topic of this article is coordination between the engineers
-                    of
-                    Mechanical-Piping (further called Piping-Stress) and Civil-Structural Disciplines. The present
-                    predicament is that although the noted-above engineers create 3D analytical models of remarkable
-                    complexity, they still work in virtual isolation and have a chance to employ computer technology
-                    for
-                    coordination only in a roundabout way i.e. after their designs have been integrated into 3D-CAD
-                    environment by designers.
-                </p>
+                    <p>
+                        The new, uncharted area and the main topic of this article is coordination between the engineers
+                        of
+                        Mechanical-Piping (further called Piping-Stress) and Civil-Structural Disciplines. The present
+                        predicament is that although the noted-above engineers create 3D analytical models of remarkable
+                        complexity, they still work in virtual isolation and have a chance to employ computer technology
+                        for
+                        coordination only in a roundabout way i.e. after their designs have been integrated into 3D-CAD
+                        environment by designers.
+                    </p>
 
-                <p class="font-extra-large">
-                    Moreover, the vast amounts of data incorporated within engineer’s
-                    models
-                    as well as the massive analyses outputs has to be conveyed to the engineer of another discipline
-                    only by conservative means of print-outs and manual mark-ups. On the positive note, with the
-                    significant progress of engineering analytical software,
-                    interdisciplinary coordination of ‘engineering’ 3D models became feasible from technical
-                    perspective and modern engineers are geared up for it.
-                </p>
+                    <p>
+                        Moreover, the vast amounts of data incorporated within engineer’s
+                        models
+                        as well as the massive analyses outputs has to be conveyed to the engineer of another discipline
+                        only by conservative means of print-outs and manual mark-ups. On the positive note, with the
+                        significant progress of engineering analytical software,
+                        interdisciplinary coordination of ‘engineering’ 3D models became feasible from technical
+                        perspective and modern engineers are geared up for it.
+                    </p>
+                    <div>
 
-                <img src="../img/struna.png" alt="" class="image-medium">
-                <p class="caption">Figure 1. Piping and Structural 3D-CAD Models brought as references into common 3D
-                    medium ‘Viewer’ for spatial coordination and clash-detection.
+                        <img src="../img/struna.png" alt="" class="image-medium">
+                        <p class="caption">Figure 1. Piping and Structural 3D-CAD Models brought as references into
+                            common
+                            3D
+                            medium ‘Viewer’ for spatial coordination and clash-detection.
 
-                </p>
+                        </p>
+                    </div>
+                </div>
 
                 <h3>Analytical or ‘Engineering’ 3D Models
                 </h3>
@@ -149,12 +157,11 @@
                             - Analytical models are repeatedly re-analyzed and modified/optimized from the project’s
                             start
                             to finish.
-                            <br>
-                            <br>
+                            <br>                            
                             - Some of these models may be split between two engineers or transferred from one engineer
                             to
                             another within the same group.
-                            <br><br>
+                            <br>
                             - More clients are becoming convinced that analytical models could be effectively reused for
                             future phases of the same Project. Hence, they request such models as part of the ‘turn-over
                             package’ along with 2D-drawing, 3D parametric models, material take-off’s, engineering
@@ -194,10 +201,10 @@
                             <br><br>
                             - Transfer of reaction forces from Piping-System(s) support nodes to the relevant points on
                             supporting structural members
-                            <br><br>
+                            <br>
                             - Transfer of critical displacements from structural output to the properties of the
                             user-selected piping supports
-                            <br><br>
+                            <br>
                             In addition, the specific needs of engineering users should be addressed by a whole plethora
                             of utilities.
                         </p>
@@ -209,13 +216,13 @@
                             input:
                             <br><br>
                             - wind and snow loads on open structure,
-                            <br><br>
+                            <br>
                             - preliminary piping and cable-tray ‘blanket’ loads
-                            <br><br>
+                            <br>
                             - operator platform and cut-walks - dead and life loads
-                            <br><br>
+                            <br>
                             - seismic static-equivalent ‘base shear’ distribution
-                            <br><br>
+                            <br>
                             - collection of load combination sets
                         </p>
                     </div>
@@ -246,8 +253,7 @@
     <footer>
         <div class="wrap-footer">
             <div class="footer-list">
-                <img src="../img/logo.png" alt="SEEDA logo">
-                <p class="regular">© 2020 SEEDA Inc. All Rights Reserved.</p>
+                <p class="regular copyright">© 2020 SEEDA Inc. All Rights Reserved.</p>
             </div>
             <div class="footer-list">
                 <p>Info</p>
